# so-assistant-server

./: Dockerfile  docker-compose.yml  main.py  ollama-entrypoint.sh  pyproject.toml  so_assistant.db
.kiro/specs/sse-llm-integration/: requirements.md
api/: assistant.py  diagrams.py  projects.py  requirements.py
app/: database.py  logger.py  main.py  models.py  ollama_client.py  prompt_analytics.py  schemas.py
app/api/: diagrams.py  projects.py  requirements.py  tasks.py  teams.py
app/config/: config.py
app/decorators/: safe_route.py
app/diagrams/: diagrams_repository.py  generate_diagrams.py
app/exceptions/: custom_exceptions.py
app/repositories/: diagrams_repository.py  projects_repository.py  so_repository.py
app/requirements/: analyze_requirements.py
app/utils/: json_utils.py  llm_response_utils.py  pdf_processor.py
output/: prompt_analytics_log.csv
