[project]
name = "so-assistant-server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi[all]>=0.116.1",
    "httpx>=0.28.1",
    "pydantic>=2.11.7",
    "pymupdf>=1.26.3",
    "sqlalchemy>=2.0.41",
    "tiktoken>=0.9.0",
    "uvicorn[standard]>=0.35.0",
]

[tool.setuptools]
packages = ["app", "api"]
